[gd_scene load_steps=6 format=3 uid="uid://ceh7yuche4ht5"]

[ext_resource type="Script" path="res://entities/enemies/goblin/shoot_goblin.gd" id="1_y2n8n"]
[ext_resource type="PackedScene" uid="uid://dup1ciwfg7blb" path="res://entities/enemies/goblin/arrow.tscn" id="2_bhtlo"]
[ext_resource type="Texture2D" uid="uid://c7uus36v4kbs3" path="res://entities/enemies/goblin/goblin_bow.png" id="2_u1e10"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2lge"]
radius = 52.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_e5r3q"]

[node name="ShootGoblin" type="StaticBody2D"]
scale = Vector2(2, 2)
collision_layer = 32
collision_mask = 6
script = ExtResource("1_y2n8n")
ArrowSpeed = 100.0
ArrowObj = ExtResource("2_bhtlo")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(9.48, 0)
scale = Vector2(0.24, 0.24)
texture = ExtResource("2_u1e10")

[node name="BashBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o2lge")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 18

[node name="ArrowBox" type="CollisionShape2D" parent="Area2D"]
z_index = -3
scale = Vector2(10.28, 10.28)
shape = SubResource("CircleShape2D_e5r3q")
debug_color = Color(0.9299, 0.235204, 0.317839, 0.42)

[node name="ArrowSpawn" type="Node2D" parent="."]
position = Vector2(-70, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
